fixed project card icon alignment

--- a/projects/projects_styles.css
+++ b/projects/projects_styles.css
@@ -183,6 +183,7 @@
 .card-icons-wrapper {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   /* outline: 2px solid lime; */
 }
 
